# labwired

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  Firmware Simulation Platform Business Research.md  LICENSE  README.md  clippy.toml  system.yaml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/labwired-test/: action.yml  summary.py
.github/workflows/: ci.yml  docker.yml  release.yml
configs/chips/: ci-fixture-cortex-m3-uart1.yaml  stm32f103.yaml
configs/systems/: ci-fixture-uart1.yaml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: breakpoints.rs  determinism.rs  golden_examples.rs  interactive_snapshot.rs  legacy_schema.rs  outputs.rs  runner.rs  script_validation.rs  stop_conditions.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/config/tests/: config_tests.rs
crates/core/: Cargo.toml
crates/core/src/: decoder.rs  interrupt.rs  lib.rs  metrics.rs  multi_core.rs  signals.rs  snapshot.rs  tests.rs
crates/core/src/bus/: mod.rs
crates/core/src/cpu/: cortex_m.rs  mod.rs  riscv.rs
crates/core/src/decoder/: arm.rs  riscv.rs
crates/core/src/memory/: mod.rs
crates/core/src/peripherals/: adc.rs  dma.rs  gpio.rs  i2c.rs  i2c_temp_sensor.rs  mod.rs  nvic.rs  rcc.rs  scb.rs  spi.rs  stub.rs  systick.rs  timer.rs  uart.rs
crates/dap/: Cargo.toml
crates/dap/src/: adapter.rs  lib.rs  main.rs  server.rs
crates/firmware/: Cargo.toml  memory.x
crates/firmware-ci-fixture/: Cargo.toml  build.rs  memory.x  minimal.ld
crates/firmware-ci-fixture/src/: main.rs
crates/firmware-hal-test/: Cargo.toml  build.rs
crates/firmware-hal-test/.cargo/: config.toml
crates/firmware-hal-test/src/: main.rs
crates/firmware/.cargo/: config.toml
crates/firmware/src/: main.rs
crates/gdbstub/: Cargo.toml
crates/gdbstub/src/: lib.rs
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs
crates/riscv-ci-fixture/src/: main.rs
docs/: advanced_peripherals.md  architecture.md  ci_integration.md  ci_test_runner.md  debugging.md  declarative_registers.md  getting_started_firmware.md  peripheral_development.md  plan.md  release_strategy.md  vscode_debugging.md
docs/design/: multi_arch_refactor.md
docs/development/: git_flow.md
editors/vscode/: package-lock.json  package.json
editors/vscode/src/: extension.ts
examples/ci/: dummy-fail-uart.yaml  dummy-max-cycles.yaml  dummy-max-steps.yaml  dummy-wall-time.yaml  uart-ok.yaml
examples/workflows/: github-actions.yml  gitlab-ci.yml
scripts/: install-hooks.sh  pre-commit.sh
tests/: dummy.elf  dummy_payload.rs  runner.rs
