[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/loader",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LabWired Team"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
goblin = "0.7"
serde = { version = "1.0", features = ["derive"] }
bitflags = "2.4"
