[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/loader",
    "crates/cli", 
    "crates/firmware",
    "crates/config",
]
exclude = ["crates/firmware-hal-test"]
default-members = ["crates/cli", "crates/core", "crates/loader"]

[workspace.package]
version = "0.8.0"
edition = "2021"
authors = ["LabWired Team"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
goblin = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bitflags = "2.4"
human-size = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
