[package]
name = "labwired-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "labwired"
path = "src/main.rs"

[dependencies]
labwired-core = { path = "../core" }
labwired-loader = { path = "../loader" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
