[package]
name = "labwired-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bitflags = { workspace = true }
labwired-config = { path = "../config" }
anyhow = { workspace = true }
serde_json = { workspace = true }
