[package]
name = "firmware-hal-test"
version = "0.10.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32f1xx-hal = { version = "0.10", features = ["stm32f103", "rt"] }
panic-halt = "0.2"

[profile.dev]
opt-level = "z"
lto = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
